--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"mysql2": "^3.2.4",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"session": "^0.1.0",
+		"uuid": "^9.0.0"
 	}
 }
