--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 	},
 	"homepage": "https://github.com/MFEE35xTRIPALS/Tripals-Backend#readme",
 	"dependencies": {
+		"axios": "^1.4.0",
 		"cors": "^2.8.5",
 		"express": "^4.18.2",
+		"i": "^0.3.7",
 		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"mysql2": "^3.2.4",
