--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   "homepage": "https://github.com/MFEE35xTRIPALS/Tripals-Backend#readme",
   "dependencies": {
     "axios": "^1.4.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "i": "^0.3.7",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
+    "passport": "^0.6.0",
     "path": "^0.12.7",
     "session": "^0.1.0",
     "swagger-autogen": "^2.23.1",
