--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.4",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "session": "^0.1.0",
     "swagger-autogen": "^2.23.1",
